--- a/src/LibraryShowCases.ipynb
+++ b/src/LibraryShowCases.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "classical-galaxy",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Library verification show cases"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "brazilian-manner",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Load framework and library"
    ]
@@ -20,7 +28,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "occasional-credits",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from workflowsteps import *\n",
@@ -35,7 +47,11 @@
   {
    "cell_type": "markdown",
    "id": "alone-hayes",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Load and assemble verification items"
    ]
@@ -44,7 +60,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "eight-methodology",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "cases_path = \"../schema/library_verification_cases.json\"\n",
@@ -57,7 +77,11 @@
   {
    "cell_type": "markdown",
    "id": "cardiac-sperm",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### note: in flag plots, 1 -> pass, 0 -> fail"
    ]
@@ -65,7 +89,11 @@
   {
    "cell_type": "markdown",
    "id": "empty-spare",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Integrated Economizer Control"
    ]
@@ -75,7 +103,10 @@
    "execution_count": 3,
    "id": "eight-interval",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -114,7 +145,10 @@
    "execution_count": 4,
    "id": "after-frederick",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -162,7 +196,11 @@
   {
    "cell_type": "markdown",
    "id": "amateur-domestic",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Supply air temperature reset 2019"
    ]
@@ -171,7 +209,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "appropriate-transaction",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -207,7 +249,10 @@
    "execution_count": 6,
    "id": "monthly-apparel",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -268,7 +313,11 @@
   {
    "cell_type": "markdown",
    "id": "intermediate-comparative",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Supply air temperature reset 2004"
    ]
@@ -277,7 +326,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "cheap-absorption",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -312,7 +365,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "liable-thumbnail",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -372,7 +429,11 @@
   {
    "cell_type": "markdown",
    "id": "rough-desperate",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Economizer High Limit A"
    ]
@@ -381,7 +442,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "nutritional-indication",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -419,7 +484,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "removed-laptop",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -466,7 +535,11 @@
   {
    "cell_type": "markdown",
    "id": "offshore-arctic",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Economizer High Limit B"
    ]
@@ -475,7 +548,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "international-macintosh",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -514,7 +591,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "sticky-expression",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -560,7 +641,11 @@
   {
    "cell_type": "markdown",
    "id": "portable-tampa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Economizer High Limit C"
    ]
@@ -569,7 +654,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "trained-virus",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -613,7 +702,10 @@
    "execution_count": 14,
    "id": "measured-status",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -661,7 +753,11 @@
   {
    "cell_type": "markdown",
    "id": "broad-retro",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Economizer High Limit D"
    ]
@@ -670,7 +766,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "recent-pressure",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -713,7 +813,10 @@
    "execution_count": 16,
    "id": "endless-speaker",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -761,7 +864,11 @@
   {
    "cell_type": "markdown",
    "id": "crude-timber",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Zone Temperature Control"
    ]
@@ -770,7 +877,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "continent-symposium",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -806,7 +917,10 @@
    "execution_count": 18,
    "id": "turned-network",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -851,7 +965,11 @@
   {
    "cell_type": "markdown",
    "id": "sporting-lounge",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### HW Reset"
    ]
@@ -860,7 +978,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "freelance-matthew",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -906,7 +1028,10 @@
    "execution_count": 20,
    "id": "worldwide-fifth",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -954,7 +1079,11 @@
   {
    "cell_type": "markdown",
    "id": "separated-filing",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### CHW Reset"
    ]
@@ -963,7 +1092,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "sustained-eleven",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1009,7 +1142,10 @@
    "execution_count": 22,
    "id": "nominated-function",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1057,7 +1193,11 @@
   {
    "cell_type": "markdown",
    "id": "junior-celtic",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Integrated Economizer Control (with IDF instrumentation and EnergyPlus simulation)"
    ]
@@ -1066,7 +1206,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "downtown-abraham",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1113,7 +1257,10 @@
    "execution_count": 24,
    "id": "southern-jacob",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1166,7 +1313,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "perceived-ready",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
