Removed unnecessary changes

--- a/src/LibraryShowCases.ipynb
+++ b/src/LibraryShowCases.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "classical-galaxy",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Library verification show cases"
    ]
@@ -15,11 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "brazilian-manner",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Load framework and library"
    ]
@@ -28,11 +20,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "occasional-credits",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from workflowsteps import *\n",
@@ -47,11 +35,7 @@
   {
    "cell_type": "markdown",
    "id": "alone-hayes",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Load and assemble verification items"
    ]
@@ -60,11 +44,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "eight-methodology",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cases_path = \"../schema/library_verification_cases.json\"\n",
@@ -77,11 +57,7 @@
   {
    "cell_type": "markdown",
    "id": "cardiac-sperm",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### note: in flag plots, 1 -> pass, 0 -> fail"
    ]
@@ -89,11 +65,7 @@
   {
    "cell_type": "markdown",
    "id": "empty-spare",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Integrated Economizer Control"
    ]
@@ -103,10 +75,7 @@
    "execution_count": 3,
    "id": "eight-interval",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -145,10 +114,7 @@
    "execution_count": 4,
    "id": "after-frederick",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -196,11 +162,7 @@
   {
    "cell_type": "markdown",
    "id": "amateur-domestic",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Supply air temperature reset 2019"
    ]
@@ -209,11 +171,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "appropriate-transaction",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -249,10 +207,7 @@
    "execution_count": 6,
    "id": "monthly-apparel",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -313,11 +268,7 @@
   {
    "cell_type": "markdown",
    "id": "intermediate-comparative",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Supply air temperature reset 2004"
    ]
@@ -326,11 +277,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "cheap-absorption",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -365,11 +312,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "liable-thumbnail",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -429,11 +372,7 @@
   {
    "cell_type": "markdown",
    "id": "rough-desperate",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Economizer High Limit A"
    ]
@@ -442,11 +381,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "nutritional-indication",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -484,11 +419,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "removed-laptop",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -535,11 +466,7 @@
   {
    "cell_type": "markdown",
    "id": "offshore-arctic",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Economizer High Limit B"
    ]
@@ -548,11 +475,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "international-macintosh",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -591,11 +514,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "sticky-expression",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -641,11 +560,7 @@
   {
    "cell_type": "markdown",
    "id": "portable-tampa",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Economizer High Limit C"
    ]
@@ -654,11 +569,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "trained-virus",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -702,10 +613,7 @@
    "execution_count": 14,
    "id": "measured-status",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -753,11 +661,7 @@
   {
    "cell_type": "markdown",
    "id": "broad-retro",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Economizer High Limit D"
    ]
@@ -766,11 +670,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "recent-pressure",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -813,10 +713,7 @@
    "execution_count": 16,
    "id": "endless-speaker",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -864,11 +761,7 @@
   {
    "cell_type": "markdown",
    "id": "crude-timber",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Zone Temperature Control"
    ]
@@ -877,11 +770,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "continent-symposium",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -917,10 +806,7 @@
    "execution_count": 18,
    "id": "turned-network",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -965,11 +851,7 @@
   {
    "cell_type": "markdown",
    "id": "sporting-lounge",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### HW Reset"
    ]
@@ -978,11 +860,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "freelance-matthew",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1028,10 +906,7 @@
    "execution_count": 20,
    "id": "worldwide-fifth",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1079,11 +954,7 @@
   {
    "cell_type": "markdown",
    "id": "separated-filing",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### CHW Reset"
    ]
@@ -1092,11 +963,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "sustained-eleven",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1142,10 +1009,7 @@
    "execution_count": 22,
    "id": "nominated-function",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1193,11 +1057,7 @@
   {
    "cell_type": "markdown",
    "id": "junior-celtic",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Integrated Economizer Control (with IDF instrumentation and EnergyPlus simulation)"
    ]
@@ -1206,11 +1066,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "downtown-abraham",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1257,10 +1113,7 @@
    "execution_count": 24,
    "id": "southern-jacob",
    "metadata": {
-    "scrolled": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1313,11 +1166,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "perceived-ready",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
